# ADgents

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  MANIFEST.in  README.md  TROUBLESHOOTING.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  start.py  test_skill_gen.py
core/: __init__.py  __main__.py  a2a_protocol.py  adk_adapter.py  agent.py  agent_store.py  crew.py  crew_manager.py  google_adk_integration.py  langchain_integration.py  llm.py  mcp_server.py  memory.py  persona.py  skills.py  task_db.py
docs/: api_reference.md  architecture.md  crew_management.md  crew_manager.md  deployment.md  google_adk_integration.md  index.md  mcp_adk.md  quickstart.md  sdk.md  skills.md  studio.md  use_cases.md
docs/project/: README.md  crew.md  crew_manager.md  skills.md
realworld/: ADGENTS_DEEP_ANALYSIS.md
sdk/python/: adgents.py
studio/: app.js  crews.html  index.html  style.css
tests/: test_basic.py
